[package]
name = "makecbz"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "gif", "webp", "rayon"] }
indicatif = "0.17.11"
zip = { version = "2.6.1", default-features = false }
