[package]
name = "makecbz"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "webp", "rayon"] }
indicatif = "0.18.4"
zip = { version = "8.5.1", default-features = false }
